crates/derive/tests/reactive/fail/06-attr-without-nested.stderr
error: expected attribute arguments in parentheses: #[reactive(...)]
 --> tests/reactive/fail/06-attr-without-nested.rs:5:7
  |
5 |     #[reactive]
  |       ^^^^^^^^
